Adjusting to new figures

--- a/main.tex
+++ b/main.tex
@@ -175,17 +175,17 @@ To better describe network activation variability, we used spectral clustering t
 
 \subsection*{Network reconstruction}
 
+\begin{figure*}[t]
+\includegraphics[width=\linewidth]{fig4.pdf}
+\caption{
+Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
+\end{figure*}
+
 The high speed of video acquisition used in this study (83 frames/s) allowed us to look not just at instantaneous correlations between activation of individual neurons, but at the propagation of signals through the network. In \textit{Xenopus} preparations, it takes about 5 ms for a presynaptic action potential to evoke neurotransmitter release in a typical tectal synapse \citep{khakhalin2012}, and about 10 ms for a typical synaptic current to depolarize postsynaptic neuron above the spiking threshold \citep{ciarleglio2015,busch2019}, which makes the frame-to-frame delay in our video recordings (12 ms) well posed to infer neuronal connections from activity.
 
 To reconstruct network connectivity, we calculated pairwise transfer entropy \citep{gourevitch2007te,stetter2012te} for activity traces of individual cells. Intuitively, for each pair of neurons $i$ and $j$ we quantified the amount of additional information that past activity of neuron $i$ can offer to predict current activity of neuron $j$. This is conceptually similar to calculating a cross-correlation between the activity of neuron $i$ at each frame $t$, and the activity of neuron $j$ at each frame $t+1$, except that transfer entropy has higher power, lower noise, and does not make assumptions about the type of influence neuron $i$ has over neuron $j$ \citep{stetter2012te}.
 
 In our experiments, all tectal neurons received shared inputs from the eye, that recruited them in similar manner in every trial. This complicated connectivity inference, as neurons could spike in a sequence both because they were connected, and because they received innervation from sequentially activated areas of the retina \citep{mehler2018lure}. To compensate for shared inputs, we randomly reshuffled trials for every neuron, calculated average transfer entropy on reshuffled data, and subtracted it from the value of transfer entropy on trial-matched data \citep{gourevitch2007te,wollstadt2014te}. In essence, instead of looking at raw responses, we worked with deviations from average response, and quantified whether these deviations tended to propagate through the network, from one neuron to another. The reshuffling step also allowed us to calculate a $p$-value for each pair of neurons, and quantify how unusual the actually observed value of transfer entropy was for this pair of neurons, compared to a value arising from shared inputs, but no causal connections.
-
-\begin{figure*}[t]
-\includegraphics[width=0.6\linewidth]{fig4.png}
-\caption{
-Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
-\end{figure*}
 
 We interpreted transfer entropy values as approximations of weights in a connectivity matrix $\textbf{W}$ (Fig. 4A), with $w_{ji}$ describing the strength of connection from neuron $i$ to neuron $j$ (but see \citealt{mehler2018lure}). We calculated $\textbf{W}$ and corresponding $p$-values independently on looming, flash, and scrambled stimuli, and used these independent estimations to ensure some level of internal replication within each experiment (see Methods). Of all possible edges, only 1.6$\pm$1.4\% were found to be non-zero in all three independent analyses, which was significantly higher than 0.6$\pm$0.09\% expected if edges were assigned at random (paired t-test $p_{tp}=$ 9e-9). Finally, in each experiment, we introduced cut-offs on edge $p$-values, to exclude weak noisy edges from the connectivity graph. As noise levels varied across recordings, we had to adjusted these cut-offs, making the number of non-zero edges in each reconstruction equal to the number of recorded cells \citep{stetter2012te}. The effective $p$-value cut-offs were between 0.001 and 0.007 depending on the experiment (median of 0.004).
 
@@ -201,13 +201,19 @@ We then looked at whether connected cells were more likely to be located spatial
 
 For each connectivity graph reconstructed from tadpole tecta, we calculated several standard network properties, and compared them across developmental stages. We also checked whether our results were statistically unusual for a network of this size, by comparing network properties of our graphs to that of matching randomized graphs \citep{ansmann2012surrogate}. To do so, we randomly rewired edges between nodes, while keeping the distribution of edge weights $w_{ji}$, and the number of non-zero edges adjacent to each node (node degree) fixed, as a generalization of degree-preserving rewiring \citep{maslov2002}. 
 
-The measure of average "connectedness" in the graph, known as weighted \textbf{network efficiency}, is defined as the average inverse shortest path for any two nodes in the network \citep{latora2001efficiency}. This value is high when there tend to be short paths between any two randomly chosen nodes, and signals can easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Fig. XXX example). For a connectivity graph, high edge weights represent strong connections, so network efficiency is calculated on inverse weights $R_{ji} = 1/w_{ji}$ \citep{rubinov2010toolbox}. We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for a randomized network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively). Efficiency did not  seem to change with age ($d$=$-$0.8, $p_t$=0.06).
+\begin{figure*}[t]
+\includegraphics[width=\linewidth]{fig5.pdf}
+\caption{
+Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
+\end{figure*}
 
-Network \textbf{clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes being a part a triangle with a third node connected to both of them (Fig. XXX example). The value of clustering coefficient in our networks was very small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but slightly larger than expected in a randomly rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals). This means that neurons with more than two connections were more likely to form clusters than one would have expected it to happen by chance. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
+The measure of average "connectedness" in the graph, known as weighted \textbf{network efficiency}, is defined as the average inverse shortest path for any two nodes in the network \citep{latora2001efficiency}. This value is high when there tend to be short paths between any two randomly chosen nodes, and signals can easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Figure 5A). For a connectivity graph, high edge weights represent strong connections, so network efficiency is calculated on inverse weights $R_{ji} = 1/w_{ji}$ \citep{rubinov2010toolbox}. We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for a randomized network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively). Efficiency did not  seem to change with age ($d$=$-$0.8, $p_t$=0.06).
 
-The network \textbf{modularity} is the most commonly used measure of mesoscale network heterogeneity \citep{leicht2008community,newman2006modularity}. A network with high modularity can be split into a set of sub-networks, with higher density of connections within each sub-network, and weaker connections between sub-networks (Fig. XXX example). In our experiments, reconstructed tectal networks were slightly more modular than randomly rewired networks ($d=$ 0.2 and 0.3, paired $p_t=$ 0.2 and 0.06, for stages 46 and 49 respectively), suggesting a structural non-randomness of network organization. Network modularity increased in development ($d=$ 1.0, $p_t =$ 0.01).
+Network \textbf{clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes being a part a triangle with a third node connected to both of them (Figure 5B). The value of clustering coefficient in our networks was very small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but slightly larger than expected in a randomly rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals). This means that neurons with more than two connections were more likely to form clusters than one would have expected it to happen by chance. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
 
-The property of \textbf{hierarchical flow} is a measure \citep{mones2012hierarchy} that we based on the distribution of Katz centrality values \citep{katz1953original,fletcher2018katz} within the network (see below for definitions). Intuitively, flow hierarchy is high when connections between nodes largely point in the same direction, as it happens in layered feed-forward networks, networks with chains of directed edges, or with activity sinks \citep{czegel2015hierarchy}. We hypothesized that a network of dedicated looming detectors may exhibit flow hierarchy, with edges leading from "feeder neurons" to "detector neurons". Indeed, tectal networks were more hierarchical than randomized networks with matching degrees distributions ($d=$ 1.5 and 1.1, paired $p_t=$ 1e-04 and 1e-03 for younger and older tadpoles respectively). There was no difference in hierarchical flow in development ($d=-$0.3, $p_t=$ 0.4).
+Network \textbf{modularity} is the most commonly used measure of mesoscale network heterogeneity \citep{leicht2008community,newman2006modularity}. A network with high modularity can be split into a set of sub-networks, with higher density of connections within each sub-network, and weaker connections between sub-networks (Fig. XXX example). In our experiments, reconstructed tectal networks were slightly more modular than randomly rewired networks ($d=$ 0.2 and 0.3, paired $p_t=$ 0.2 and 0.06, for stages 46 and 49 respectively), suggesting a structural non-randomness of network organization. Network modularity increased in development ($d=$ 1.0, $p_t =$ 0.01).
+
+\textbf{Hierarchical flow} is a measure of network hierarchy \citep{mones2012hierarchy} that we based on the distribution of Katz centrality values within the network (\citealt{katz1953original,fletcher2018katz}; see below for definitions). Intuitively, flow hierarchy is high when connections between nodes largely point in the same direction, as it happens in layered feed-forward networks, networks with chains of directed edges, or with activity sinks \citep{czegel2015hierarchy}. We hypothesized that a network of dedicated looming detectors may exhibit flow hierarchy, with edges leading from "feeder neurons" to "detector neurons". Indeed, tectal networks were more hierarchical than randomized networks with matching degrees distributions ($d=$ 1.5 and 1.1, paired $p_t=$ 1e-04 and 1e-03 for younger and older tadpoles respectively). There was no difference in hierarchical flow in development ($d=-$0.3, $p_t=$ 0.4).
 
 \subsection*{Selectivity Mechanisms}
 
@@ -434,7 +440,7 @@ Our definition of \textbf{hierarchical flow} was inspired by \citep{mones2012hie
 
 \[ z_j = (1-d) + \frac{d}{\text{max}_{k,l}(w_{kl})} \sum_{i \neq j}{a_i w_{ji}} \]
 
-Each node then further redirected this activation to other nodes. This definition is very close to that of pagerank centrality \citep{page1999pagerank}, with a minor difference that the weights are not normalized to the value of total outgoing weights for each node $i$: that is, we work with raw weights of $w_{ji}$ rather than $w_{ji}/\sum_k{w_{ki}}$. It means that a node with many outputs has a strong influence over network activation, nodes with weak outgoing edges act almost as dead-ends. Similar to a standard pagerank algorithm, we found solution the stable solution of this problem iteratively, by initializing the network with equal values of centrality, and then running the equation above 100 times or until convergence. Once the distribution of centralities $z_i$ stabilized, we used the difference between the maximal Katz centrality and mean centrality across all nodes as a measure of hierarchical flow in the network [ref]: $h = \text{max}(z_i) - \text{mean}(z_i)$.
+Each node then further redirected this activation to other nodes. This definition is very close to that of pagerank centrality \citep{page1999pagerank}, with a minor difference that the weights are not normalized to the value of total outgoing weights for each node $i$: that is, we work with raw weights of $w_{ji}$ rather than $w_{ji}/\sum_k{w_{ki}}$. It means that a node with many outputs has a strong influence over network activation, nodes with weak outgoing edges act almost as dead-ends. Similar to a standard pagerank algorithm, we found solution the stable solution of this problem iteratively, by initializing the network with equal values of centrality, and then running the equation above 100 times or until convergence. Once the distribution of centralities $z_i$ stabilized, we used the difference between the maximal Katz centrality and mean centrality across all nodes as a measure of hierarchical flow in the network \citep{mones2012hierarchy,czegel2015hierarchy}: $h = \text{max}(z_i) - \text{mean}(z_i)$.
 
 To check whether network values described above were different from values expected on a random graph, we performed \textbf{graph randomization}, using a variant of degree-preserving reshuffling \citep{maslov2002} that we generalized for directed weighted graphs. For a network with $N_E$ edges we picked 3$\cdot N_E$ random pairs of nodes (nodes $i$, $j$, $k$, and $l$) that had strong connections from $i$ to $j$, and from $k$ to $l$, but weak connections or no connections from $i$ to $l$, and from $j$ to $k$ (we required $w_{ji}>w_{li}$ and $w_{lk}>w_{jk}$). We also required all four nodes to be different ($i \neq j \neq k \neq l$). Then we cross-wired these pairs of nodes, gradually randomizing network topology:
 
