--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 
 \section*{Abstract}
 % 206 words now; should be 200
-Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For some animals, key computations involved in looming detection and collision avoidance are performed by distributed networks, making it hard to tease out underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report differences in degree distributions and modularity of networks reconstructed from younger and older animals, and show that looming-selective cells tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these results to predictions from a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured inputs. We show that the model developed robust looming selectivity, and replicated several effects observed in imaging experiments, including changes in modularity and degree distribution. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were not observed in imaging experiments. By comparing several reduced models, we predict which developmental rules are most critical for the development of looming selectivity in the brain.
+Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For some animals, key computations involved in looming detection and collision avoidance are performed by distributed networks, making it hard to tease out underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report differences in degree distributions and modularity of networks reconstructed from younger and older animals, and show that looming-selective cells tended to serve as activation sinks within the network. We compare these results to predictions from a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured inputs. We show that the model developed robust looming selectivity, and replicated several effects observed in imaging experiments, including changes in modularity and degree distribution. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were not observed in imaging experiments. By comparing several reduced models, we predict which developmental rules are most critical for the development of looming selectivity in the brain.
 %TC:ignore 
 \bigskip
 
@@ -217,17 +217,23 @@ Network \textbf{modularity} is the most commonly used measure of mesoscale netwo
 
 \subsection*{Selectivity Mechanisms}
 
-Even though the exact architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that the position of selective neurons within connectivity graphs would not be random \citep{timme2016degree}. To verify that, for each reconstructed network we tested correlations between looming selectivity of each neuron and several values that quantify its place within the network, known as measures of \textbf{centrality}.
+Even though the exact architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that the position of selective neurons within connectivity graphs would not be random \citep{timme2016degree}. To verify that, for each reconstructed network we tested correlations between looming selectivity of each neuron and values that quantify its place within the network, known as measures of \textbf{centrality}.
 
-We first looked whether selective cells receive more incoming connections, compared to non-selective cells \citep{litwin2014assemblies}. We found that in stage 46 tadpoles the \textbf{number of incoming connections} did not correlate with selectivity ($r=$ 0.08$\pm$0.24, $p_{t1}=$ 0.2; individual $r>$0 in 9/14 experiments), but for stage 49 the correlation was significant, even if weak ($r=$ 0.07$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments), indicating that in older tadpoles selective cells may receive slightly more inputs, compared to non-selective cells.
+To identify information sinks, for each cell we calculated its \textbf{Katz centrality} within the graph \citep{katz1953original,fletcher2018katz}. By definition, nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph is more likely to eventually cause activation of these nodes, compared to a node with a low Katz centrality. We found that when all cells from all experiments are considered (Figure 6A), there was a weak correlation between looming selectivity of cells and their Katz centrality ($r =$ 0.02, $p_{r} =$ 1e-6, $n=$2487). Correlation coefficients between Katz centrality and selectivity were positive in 19/30 experiments (Figure 6B; average $r=$ 0.09$\pm$0.20 $p_{t1}=$ 0.03), and there was no difference in this effect in development ($p_t=$ 0.5).
+
+A node may have high Katz centrality for two reasons: it may receive a higher number of incoming connections (higher in-degree), or have chains of directed edges lead to it. To see which of these patterns may be at work here, we checked whether looming-selective cells received more incoming connections, compared to non-selective cells \citep{litwin2014assemblies}. When all points were considered, there was no correlation between in-degree and cell selectivity ($p_{r}=$0.3, $n=$ 2487), but for individual experiments correlation coefficients between in-degree and selectivity were positive in 20/30 of cases (Figure 6C, $p_{t1}=$ 0.03). There was no change of this correlation in development ($p_t=$0.5).
 
 % If necessary, we may add back a statement that they didn't get more projections out, in contradiction with [timme2016degree], which is probably because they would be projecting out of the network, and not in?
 
-As a potentially more relevant way to identify information sinks, for each cell we calculated its \textbf{Katz centrality} within the graph \citep{katz1953original,fletcher2018katz}. Nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph would be more likely to eventually cause activation of these nodes, compared to a node with a low centrality value. We found that graphs from younger tadpoles showed no correlation between Katz centrality and looming selectivity ($r =$ 0.08$\pm$0.25, $p_{t1} =$ 0.25, individual $r>$0 in 8/14 experiments), but in older tadpoles Katz centrality correlated with selectivity ($r=$ 0.08$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments).
+As cells with higher Katz centrality tend to be activated more often \citep{fletcher2018katz}, we checked whether selectivity for looming stimuli correlated with cell \textbf{average spiking activity} during our recordings. We found that for both younger and older animals, actively spiking cells tended to have stronger looming selectivity (across all cells $r_S=$ 0.07, $p_r=$ 4e-4; average $r_S =$ 0.34$\pm$0.20 and 0.14$\pm$0.26 respectively; in both cases $r$ is significantly $>0$, $p_{t1}=$ 2e-5 and 0.04), which matches predictions from our earlier studies of intrinsic excitability in the tectum \citep{busch2019}. The size of this correlation decreased in development ($p_t=$ 4e-4). (For this analysis we used Spearman rather than Pearson correlation, as 4 experiments had single neurons with extremely high activity levels that acted as influential points. Excluding these 4 neurons and using Pearson correlation leads to similar results.) 
 
-As cells with higher Katz centrality tend to be activated more often \citep{fletcher2018katz}, we checked whether cell selectivity for looming stimuli correlated with its \textbf{average activity} during the recording. We found that for both younger and older animals, actively spiking cells tended to have stronger looming selectivity ($r =$ 0.20$\pm$0.24 and 0.14$\pm$0.19 respectively; in both cases $r$ is significantly $>0$, $p_{t1}=$ 0.01 and 0.01), which matches predictions of earlier studies of intrinsic excitability in the tectum \citep{busch2019}. There was no change in this correlation over development ($p_t=$ 0.4).
+If looming-selective cells gather information from the network, it was plausible to expect that they could be more likely connected to other selective cells, rather than to non-selective ones. To test this, we looked into \textbf{assortativity of selectivity}: a weighted correlation between selectivity scores of cells connected by edges, with strength of these edges used as weight (see Methods). We found that in both younger and older tadpoles selectivities of connected cells correlated (for stage 46: $r$=0.07$\pm$0.13, $p_{t1}$=0.04, individual $r>$0 in 9/14 experiments; for stage 49: $r$=0.07$\pm$0.10, $p_{tq}$=0.02; individual $r>$0 in 10/16 experiments). This suggests that similarly selective cells tended to be connected to each other. There was no change in this effect over development ($p_t=$ 0.9).
 
-If looming-selective cells gather information from the network, it was plausible to expect that they would be more likely connected to other selective cells, rather than to non-selective ones. To test this, we looked into the weighted \textbf{assortativity of selectivity} value: a weighted correlation between the selectivity scores of cells connected by edges, with strength of these edges used as weight (see Methods). We found that selectivities of connected cells did not correlate in graphs reconstructed from younger tadpoles ($r$=0.05$\pm$0.12, $p_{t1}$=0.14, individual $r>$0 in 9/14 experiments), but weakly correlated in older tadpoles ($r$=0.05$\pm$0.07, $p_{tq}$=0.01; individual $r>$0 in 11/16 experiments). Together with centrality results, it suggests that the distribution of selective cells in older networks was less random, which may indicate a higher role of distributed calculations in older animals.
+% LOOK AT THE PLOT
+
+Finally, we checked whether higher average activity of looming-selective cells linked them into tight clusters, or "rich clubs". We calculated \textbf{local clustering coefficient} for each cell, and checked whether it correlated with cell selectivity. We found that local clustering coefficient did not correlate with cell selectivity when all cells were considered ($p_r=$ 0.6, n=2487), and across all reconstruction, correlation coefficients observed in individual experiments were not different from zero ($p_t1=$ 0.25, n=30), indicating that while selective cells tended to be connected to each other, they did not form clusters.
+
+Together these results suggest that the distribution of selective cells in tectal networks was not random. It is particularly true in younger animals, where selective cells tended to serve as activation sink, and showed higher levels of activation.
 
 We also hypothesized that selectivity for looming stimuli may gradually “accumulate” as the signal propagates through the network, and so “downstream” cells on the receiving end of a strong edge within a graph would, on average, be more selective than “upstream” cells. This hypothesis proved to be wrong in both younger and older tadpoles: across all experiments, 52$\pm$7\% of strong edges (top 25\% of $w_{ji}$ values) led from cells with less to more selective cells, which is not different from chance rate ($p_{t1}$=0.1 for analysis across experiments, $n$=30). A weighted average increase in selectivity between two cells connected by an edge was 0.02$\pm$0.07 (not different from zero: $p_{t1}$=0.2, $n$=30), and there was no change in this value in development ($p_t$=0.2, $n$=14, 16).
 
