--- a/table1.tex
+++ b/table1.tex
@@ -51,7 +51,7 @@ Ensembles are overconnected & \checkmark & \checkmark & \checkmark & \times & \c
 Are spatially close & \checkmark & \checkmark & \times & \times & \checkmark & \checkmark & \times \\
 Get closer in development& \times & \times & \times & \times & \times & \times & \times \\
 Edges point to periphery & = & = & = & \checkmark & = & = & =\\
-Edges increase selectivity & \times & \times & \times & \checkmark & \times & \times & \times \\
+%Edges increase selectivity & \times & \times & \times & \checkmark & \times & \times & \times \\
 \hline
 \multicolumn{8}{l}{\textbf{Network properties:}}\\
 %Degree $k=0$, change & \lor & \lor & \lor & \land & \lor & \lor & \lor \\
